# spiky

./: Cargo.toml  README.md
assets/prefabs/: background.ron  platforms.ron  player.ron  spikes.ron
assets/tilemaps/: map.json  map.tmx  map2.json
resources/: bindings_config.ron  display_config.ron
src/: main.rs
src/components/: animation.rs  collision.rs  collision_platform.rs  directions.rs  mod.rs  player.rs  spike.rs
src/entities/: camera_subject.rs  mod.rs  player.rs
src/resources/: asset.rs  context.rs  map.rs
src/states/: load.rs
src/systems/: animation.rs  collision.rs  death.rs  input.rs  kinematics.rs  mod.rs  parallax.rs  transformation.rs
