[package]
name = "spiky"
version = "0.1.0"
authors = ["boris.petrov <b.petrov@dssolutions.bg>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
amethyst = {version = "0.15.1", features = ["vulkan", "json", "no-slow-safety-checks"]}
amethyst_test = "0.15.3"
serde = "*"
log = "*"
specs-derive = "*"